--- a/StandardTemplate/htmlAndCss/gridTemplate.html
+++ b/StandardTemplate/htmlAndCss/gridTemplate.html
@@ -7,19 +7,19 @@
 <body>
 <div class="grid-container">
 	<div class="header">
-		<p><b>Header</b></p>
+		<p><h1>Header</h1></p>
 	</div>
 	<div class="bar">
-		<p><b>Bar</b></p>
+		<p><h1>Bar</h1></p>
 	</div>
 	<div class="menu">
-	<p><b>Menu</b></p>
+		<p><h1>Menu</h1></p>
 	</div>
 	<div class="main">
-	<p><b>Main</b></p>
+		<p><h1>Main</h1></p>
 	</div>
 	<div class="footer">
-		<p><b>Footer</b></p>
+		<p><h1>Footer</h1></p>
 	</div>
 </body>
 </html>
